final clean ups; fix toolbar spacing; toolbar nav items text;

--- a/src/app/shared/components/tool-bar/tool-bar.component.scss
+++ b/src/app/shared/components/tool-bar/tool-bar.component.scss
@@ -21,7 +21,7 @@
 }
 
 .top-toolbar {
-  min-height: 5rem;
+  min-height: 6rem;
   background: transparent;
   padding: 0 3.5rem;
 }
@@ -52,6 +52,7 @@
   height: auto;
   max-height: 4rem;
   object-fit: contain;
+  margin: 4px 0;
 }
 
 /* Nav links */
